# Copyright 2026 Google LLC
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# build/ comes from DEPS + running `gclient sync`
import("//build/dotfile_settings.gni")

# The location of the build configuration file.
buildconfig = "//build/config/BUILDCONFIG.gn"

# The python interpreter to use by default. On Windows, this will look
# for python3.exe and python3.bat.
script_executable = "python3"

default_args = {
  enable_rust = false
  use_llvm_libatomic = false
  use_siso = true
  treat_warnings_as_errors = false

  # Set to true automagically when building in the Chromium tree.
  build_with_chromium = false
}
